# promptrs

./: Cargo.toml  README.md
examples/org-agent/: README.md  componentize.sh  deno.json  package.json  tsconfig.json
examples/org-agent/shim/: fs.ts
examples/org-agent/src/: lib.ts  meta.ts  parse.ts  tools.ts  util.ts  wasi.ts
examples/org-agent/types/: promptrs-gen-chat.d.ts  promptrs-gen-ifc.d.ts  wasi-clocks-monotonic-clock.d.ts  wasi-clocks-wall-clock.d.ts  wasi-filesystem-preopens.d.ts  wasi-filesystem-types.d.ts  wasi-io-poll.d.ts  wasi-io-streams.d.ts
examples/org-agent/wit/: world.wit
examples/org_agent/: README.md  package-lock.json  package.json
examples/org_agent/src/: lib.js  parse.js  tools.js
examples/org_agent/wit/: world.wit
lib/: deno.json  index.ts
promptrs-core/: Cargo.toml
promptrs-core/src/: agent.rs  lib.rs  prompt.rs
promptrs-deno/: Cargo.toml
promptrs-deno/src/: main.rs
promptrs-deno/tools/: org_agent.ts  todo_agent.ts
promptrs-wasm/: Cargo.toml
promptrs-wasm/src/: agent.rs  lib.rs  prompt.rs
promptrs-wasm/wit/: world.wit
src/: agent.rs  client.rs  https.rs  lib.rs  main.rs  mcp.rs  openai.rs  parser.rs  prompt.rs  pruner.rs  tls.rs
tool/: Cargo.toml
tool/src/: lib.rs
tools/: kb_agent.ts  org_agent.ts  todo_agent.ts
wit/: world.wit
