[package]
name = "promptrs"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2024"
description = "A framework for building composable agentic workflows"
license = "LGPL-3.0"
repository = "https://github.com/metent/promptrs"
keywords = ["ai", "prompts", "llm", "agents"]
categories = ["text-processing", "parsing", "development-tools"]

[dependencies]
attohttpc = { version = "0.30.1", default-features = false, features = ["charsets", "json", "single-threaded", "tls-rustls-webpki-roots-ring"] }
either = "1.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winnow = "0.7.11"
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
tool-attr-macro = { path = "tool", version = "0.1.0" }
log = "0.4.27"
