[package]
name = "promptrs"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2024"
description = "A framework for building composable agentic workflows"
license = "LGPL-3.0"
repository = "https://github.com/metent/promptrs"
keywords = ["ai", "prompts", "llm", "agents"]
categories = ["text-processing", "parsing", "development-tools"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
winnow = "0.7.11"
tool-attr-macro = { path = "tool", version = "0.1.0" }
log = "0.4.27"
rustls = { version = "0.23.32", default-features = false, features = ["ring", "std", "tls12"] }
url = "2.5.7"
rustls-native-certs = "0.8.2"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "1.48.0", features = ["net", "io-util"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wstd = "0.6.1"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
