[package]
name = "promptrs"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2024"
description = "A framework for building composable agentic workflows"
license = "LGPL-3.0"
repository = "https://github.com/metent/promptrs"
keywords = ["ai", "prompts", "llm", "agents"]
categories = ["text-processing", "parsing", "development-tools"]

[dependencies]
either = "1.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
winnow = "0.7.14"
tool-attr-macro = { path = "tool", version = "0.1.0" }
log = "0.4.29"
futures-util = { version = "0.3.31", features = ["io"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "json", "rustls-tls", "stream"] }

[target.'cfg(target_os = "wasi")'.dependencies]
futures-lite = "1.12.0"
wstd = "0.6.3"
http = "1.4.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
