[package]
name = "promptrs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
attohttpc = { version = "0.29.2", default-features = false, features = ["charsets", "json", "tls-rustls-native-roots"] }
either = "1.15.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
