[package]
name = "promptrs-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
attohttpc = { version = "0.29.2", default-features = false, features = ["charsets", "json", "tls-rustls-native-roots"] }
either = "1.15.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
wasmtime = { version = "33.0.0", default-features = false, features = ["component-model", "cranelift", "runtime"] }
argh = { version = "0.1.13", optional = true }
env_logger = { version = "0.11.8", optional = true }
wasmtime-wasi = "33.0.0"

[features]
cli = ["argh", "env_logger"]

[[bin]]
name = "promptrs"
required-features = ["cli"]
