[package]
name = "tool-attr-macro"
version = "0.1.0"
authors = ["Rishabh Das <rdas@tutanota.com>"]
edition = "2024"
description = "Attribute macro for defining tools in promptrs"
license = "LGPL-3.0"
repository = "https://github.com/metent/promptrs"
keywords = ["ai", "prompts", "llm", "agents"]
categories = ["text-processing", "parsing", "development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
